# src/main/java/it/gov/pagopa/pu/registry/dto/BaseRegistryDTO.java
@@ -1,0 +1,29 @@
+package it.gov.pagopa.pu.registry.dto;
+
+import it.gov.pagopa.pu.registry.enums.RegistryEventSubType;
+import jakarta.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.experimental.SuperBuilder;
+
+import java.time.OffsetDateTime;
+
+@Data
+@SuperBuilder
+@NoArgsConstructor
+@AllArgsConstructor
+public class BaseRegistryDTO {
+  @NotNull
+  private String registryId;
+  @NotNull
+  private OffsetDateTime dateTime;
+  @NotNull
+  private String traceId;
+  @NotNull
+  private RegistryEventSubType eventSubType;
+  @NotNull
+  private String requestorId;
+  @NotNull
+  private String grantorId;
+}
