# src/main/java/it/gov/pagopa/pu/registry/dto/SendTimelineFullRegistryDTO.java
@@ -1,0 +1,16 @@
+package it.gov.pagopa.pu.registry.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+import lombok.experimental.SuperBuilder;
+
+@EqualsAndHashCode(callSuper = true)
+@Data
+@SuperBuilder
+@NoArgsConstructor
+@AllArgsConstructor
+public class SendTimelineFullRegistryDTO extends SendTimelineRegistryDTO {
+  private String body;
+}
