# src/main/java/it/gov/pagopa/pu/registry/dto/SendTimelineRegistryDTO.java
@@ -1,0 +1,37 @@
+package it.gov.pagopa.pu.registry.dto;
+
+import it.gov.pagopa.pu.registry.enums.RegistryOutcome;
+import jakarta.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+import lombok.experimental.SuperBuilder;
+
+import java.time.OffsetDateTime;
+import java.util.List;
+
+@EqualsAndHashCode(callSuper = true)
+@Data
+@SuperBuilder
+@NoArgsConstructor
+@AllArgsConstructor
+public class SendTimelineRegistryDTO extends BaseRegistryDTO {
+  @NotNull
+  private Long organizationId;
+  @NotNull
+  private String streamId;
+  @NotNull
+  private String eventId;
+  @NotNull
+  private String eventType;
+  @NotNull
+  private String notificationRequestId;
+  private String iun;
+  private Integer recipientIndex;
+  private String newStatus;
+  private OffsetDateTime eventTimestamp;
+  private List<String> legalFactIds;
+  @NotNull
+  private RegistryOutcome outcome;
+}
